# asciidesmos

./: .gitignore  Cargo.toml  README.md  flake.nix  main.rs
ast/: Cargo.toml
ast/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
compiler/: Cargo.toml
compiler/src/: builtins.rs  call.rs  compiler.rs  error.rs  import.rs  lib.rs  types.rs
compiler/src/stdlib/: mod.rs  test.dsm
desmos_lang/: Cargo.toml
desmos_lang/src/: ast.rs  builtins.rs  lib.rs  types.rs
desmos_lang/src/compiler/: builtins.rs  call.rs  compiler.rs  error.rs  mod.rs  types.rs
desmos_lang/src/core/: ast.rs  latex.rs  mod.rs
desmos_lang/src/parser/: grammar.pest  parser.rs
editor/: Cargo.toml  README.md  package.json  tsconfig.json
editor/pages/: index.tsx
editor/src/: lib.rs
editor/util/: langServer.ts
graph/: Cargo.toml
graph/src/: lib.rs
latex/: Cargo.toml
latex/src/: lib.rs
lsp/: Cargo.toml
lsp/src/: lib.rs
lsp/test/: test.py
parser/: Cargo.toml
parser/src/: lib.rs  main.rs  parser.rs  types.rs
src/: builtins.rs  compiler.rs  error.rs  grammar.pest  latex.rs  lib.rs  parser.rs  parserold.rs  parserv2.rs  types.rs
src/interpreter/: interpreter.rs
src/parser/: ast.rs  binop.rs  chars.rs  equation.rs  mod.rs  parser.rs  simple.rs
types/: Cargo.toml
types/src/: lib.rs
wasm/: Cargo.toml  README.md  index.html
wasm/src/: lib.rs
