[package]
name = "desmos_lang"
version = "0.1.0"
authors = ["runner"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.0.1"
nom_locate = "3.0.0"
nom-recursive = "0.3.0"

[[bin]]
name = "desmosc"
path = "main.rs"
