[package]
name = "desmosc"
version = "0.1.0"
authors = ["Scoder12"]
edition = "2018"

[dependencies]
ariadne = "0.1.5"
chumsky = "0.8.0"
clap = "2.33.3"
compiler = { path = "../compiler" }
graph = { path = "../graph" }
latex = { path = "../latex" }
lsp = { path = "../lsp" }
parser = { path = "../parser" }
types = { path = "../types" }
serde_json = "1.0.81"
slab = "0.4.6"
lsp-server = "0.6.0"

[[bin]]
name = "desmosc"
path = "src/main.rs"
