[package]
name = "desmosc-wasm"
version = "0.1.0"
authors = ["Scoder12"]
edition = "2018"

[dependencies]
desmos_lang = { path = "../desmos_lang" }
graph = { path = "../graph" }
parser = { path = "../parser" }
wasm-bindgen = "0.2.80"
latex = { path = "../latex" }
serde_json = "1.0.81"
js-sys = "0.3.57"
lsp-types = "0.93.0"
lsp-server = "0.6.0"
lsp = { path = "../lsp" }

[lib]
crate-type = ["cdylib"]
