[package]
name = "desmosc-wasm"
version = "0.1.0"
authors = ["Scoder12"]
edition = "2018"
# fails to download for some reason
wasm-opt = false

[dependencies]
desmos_lang = { path = "../desmos_lang" }
parser = { path = "../parser" }
wasm-bindgen = "0.2.80"
latex = { path = "../latex" }

[lib]
crate-type = ["cdylib"]
